--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/6bcd5dd7ac.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
